# hummstrumm

./: .dir-locals.el  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  CTestConfig.cmake  ChangeLog  FAQ  HACKING  INSTALL  NEWS  README  THANKS  config.h.in  generate-documentation.bash  generate-documentation.bat  hummstrummengine.pc.in  release-checklist
CPPUnit/: CMakeLists.txt  README
CPPUnit/include/cppunit/: Portability.h
CPPUnit/include/cppunit/extensions/: TestSuiteBuilderContext.h
CPPUnit/src/: TestSuiteBuilderContext.cpp  TextTestRunner.cpp
cmake/: CPackSetup.cmake  CheckClone.cmake  CheckCpp11.cmake  CheckGL.cmake  CheckPackages.cmake  CheckPrograms.cmake  CheckWorkingCopy.cmake  CheckX11.cmake  CompilerChecks.cmake  Configuration.cmake  CppCheck.cmake  Defaults.cmake  Dist.cmake  FindCPPUnit.cmake  FindTBB.cmake  Findcppcheck.cmake  Flags.cmake  GitTag.cmake  MaintainerMode.cmake  MaintainerModeChecks.cmake  MakeChangeLog.cmake  MakeChangeLogInternal.cmake.in  PkgConfig.cmake  Platform.cmake  SourceGroups.cmake  SubversionTag.cmake  Uninstall.cmake  UninstallInternal.cmake.in  UnitTest.cmake  UploadDownloads.cmake  UseDoxygen.cmake  VariableLogging.cmake  Version.cmake  cmake_uninstall.cmake  cmake_uninstall.cmake.in
cmake/system/: cpuid.c  cpuid.h  detectCPUID.c  detectGLX.c  detectSSE.c  detectSSE2.c
doc/: CMakeLists.txt  Doxyfile.in  conventions.md  header.html  libstdc++.tag  mainpage.md
engine/: CMakeLists.txt  Doxyfile  Doxyfile.in  hummstrummengine.pc.in
engine/doc/: CMakeLists.txt  Doxyfile.in  README.documentation  footer.html  header.html  styles.css
engine/include/: compileconfig.hpp  config.h  heap.hpp  hummstrummengine.hpp  libgameengine.hpp  object.hpp  pointer.hpp  type.hpp
engine/include/accessors/: accessor.hpp
engine/include/containers/: list.hpp  list.inl
engine/include/core/: allocationtable.hpp  engine.hpp  heap.hpp  object.hpp  pointer.hpp  pointer.inl  pool.hpp  pool.inl  type.hpp
engine/include/date/: date.hpp  date.inl  duration.hpp  duration.inl  timezone.hpp
engine/include/debug/: log.hpp  loggable.hpp  profiler.hpp  utils.hpp
engine/include/debug/logging/: backend.hpp  backend.inl  level.hpp  manip.hpp  manip.inl  streambuffer.hpp  streambuffer.inl
engine/include/error/: divisionbyzero.hpp  error.hpp  generic.hpp  invalidparam.hpp  iterator.hpp  memorycorruption.hpp  outofmemory.hpp  outofrange.hpp  unicode.hpp  windowsystem.hpp
engine/include/events/: windowEvents.hpp  windowevents.hpp
engine/include/filesystem/: iri.hpp
engine/include/geometry/: boundingBox.hpp  boundingbox.hpp  boundingsphere.hpp  geomutils.hpp  plane.hpp  plane.inl  segment.hpp
engine/include/math/: mathutils.hpp  matrice.hpp  quaternion.hpp  simd.hpp  vector.hpp
engine/include/renderer/: windowGLXParam.hpp  windowMSWin.hpp  windowParameters.hpp  windowSystem.hpp  windowWGLParam.hpp  windowX11.hpp
engine/include/system/: clock.hpp  clock.inl  endian.hpp  endianness.hpp  endianness.inl  memory.hpp  platform.hpp  platform.inl  processors.hpp  processors.inl
engine/include/types/: character.hpp  date.hpp  inttypes.hpp  number.hpp  rawdata.hpp  string.hpp  time.hpp
engine/include/window/: windowsystem.hpp  windowvisualinfo.hpp
engine/src/accessors/: accessor.cpp
engine/src/core/: allocationtable.cpp  engine.cpp  heap.cpp  object-win64.asm  object.cpp  pointer.cpp  type.cpp
engine/src/date/: date.cpp  duration.cpp  timezone.cpp
engine/src/date/posix/: timezone.cpp
engine/src/debug/: log.cpp  profiler.cpp
engine/src/debug/logging/: backend.cpp  manip.cpp  streambuffer.cpp
engine/src/error/: divisionbyzero.cpp  error.cpp  generic.cpp  invalidparam.cpp  iterator.cpp  memorycorruption.cpp  outofmemory.cpp  outofrange.cpp  unicode.cpp  windowsystem.cpp
engine/src/events/: windowEvents.cpp  windowevents.cpp
engine/src/math/: vector.cpp
engine/src/renderer/: windowMSWin.cpp  windowX11.cpp
engine/src/system/: endian.cpp  endianness.cpp
engine/src/system/bsd/: clock.cpp  memory.cpp  platform.cpp  processors.cpp
engine/src/system/gnulinux/: clock.cpp  memory.cpp  platform.cpp  processors.cpp
engine/src/system/posix/: clock.cpp  memory.cpp  platform.cpp  processors.cpp
engine/src/system/windows/: clock.cpp  memory.cpp  platform.cpp  processors.cpp
engine/src/types/: character.cpp  date.cpp  inttypes.cpp  number.cpp  rawdata.cpp  string.cpp  time.cpp
engine/src/window/: windowvisualinfo.cpp
engine/src/window/win/: windowsystem.cpp
engine/src/window/x11/: windowsystem.cpp
engine/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  core.cpp  core_cppunit.cpp  core_no_cppunit.cpp  date.cpp  endian.cpp  error.cpp  geometry.cpp  log.cpp  math.cpp  math_profiler.cpp  math_profiler.sh  system.cpp  systemprint.cpp  test_engine_log  timing.cpp  types.cpp  vector.cpp  window-new.cpp  window.cpp
include/: config.h.in  hummstrummengine.hpp
include/core/: engine.hpp
include/date/: date.hpp  date.inl  duration.hpp  duration.inl  timezone.hpp
include/debug/: profiler.hpp  profiler.inl  utils.hpp
include/events/: windowevents.hpp
include/filesystem/: iri.hpp
include/geometry/: boundingbox.hpp  boundingbox.inl  boundingsphere.hpp  boundingsphere.inl  geomutils.hpp  plane.hpp  plane.inl  segment.hpp  segment.inl
include/math/: mathutils.hpp  mathutils.inl  matrice.hpp  matrix.hpp  matrix.inl  quaternion.hpp  quaternion.inl  simd.hpp  vector.hpp  vector.inl
include/system/: clock.hpp  clock.inl  endianness.hpp  endianness.inl  memory.hpp  memory.inl  platform.hpp  platform.inl  processors.hpp  (+1 more)
scripts/: git2cl  googlecode_upload.pl
tests/: CMakeLists.txt  core_cppunit.cpp  core_no_cppunit.cpp  date.cpp  geometry.cpp  log.cpp  math.cpp  math_profiler.cpp  math_profiler.sh  system.cpp  systemprint.cpp  timing.cpp  window-new.cpp  window.cpp
tests/date/: date.cpp  duration.cpp  timezone.cpp
tests/debug/: profiler.cpp
tests/geometry/: boundingsphere.cpp  plane.cpp  segment.cpp
tests/math/: matrix.cpp  quaternion.cpp  vector.cpp
tests/system/: clock.cpp  endianness.cpp
(+42 files in other folders)
